test/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  labels:
  name: preview-gateway
  namespace: preview-feat-domain-ef5b2d3
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        # - "*.preview-127.0.0.1.sslip.io"
        - ephemeral-environments-feat-domain-18.preview.tradersclub.com.br
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: preview-domain-cert
        httpsRedirect: true
        mode: SIMPLE
